--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,27 @@
 ########################################################################
 #                   SQLSERVER PROPS
 ########################################################################
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=conference_app
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+### Hibernate Properties
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+## Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto=none
 ########################################################################
 #                   POSTGRESQL PROPS
 ########################################################################
-#spring.datasource.url=jdbc:postgresql://localhost:5432/conference_app
-#spring.datasource.username=ahmed
-#spring.datasource.password=1234
-#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto = none
-#spring.jpa.hibernate.show-sql=true
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 ########################################################################
 #                   MYSQL PROPS
 ########################################################################
